<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <TextView
        android:id="@+id/india_covid_tracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/india_covid_19_ntracker"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/blackColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline" />

    <TextView
        android:id="@+id/text_last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_updated"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/holoGreen"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline" />

    <TextView
        android:id="@+id/last_updated_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/text_last_updated" />

    <TextView
        android:id="@+id/text_confirmed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/confirmed"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/text_active"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/india_covid_tracker" />

    <TextView
        android:id="@+id/text_active"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/active"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/text_recovered"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/text_confirmed"
        app:layout_constraintTop_toTopOf="@id/text_confirmed" />

    <TextView
        android:id="@+id/text_recovered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/recovered"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/text_deceased"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/text_active"
        app:layout_constraintTop_toTopOf="@id/text_active" />

    <TextView
        android:id="@+id/text_deceased"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/deceased"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/text_recovered"
        app:layout_constraintTop_toTopOf="@id/text_recovered" />

    <ImageView
        android:id="@+id/image_virus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_virus"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toEndOf="@id/text_confirmed"
        app:layout_constraintStart_toStartOf="@id/text_confirmed"
        app:layout_constraintTop_toBottomOf="@id/text_confirmed" />

    <ImageView
        android:id="@+id/image_patient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@null"
        android:paddingStart="6dp"
        android:paddingEnd="0dp"
        android:src="@drawable/ic_patient"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toEndOf="@id/text_active"
        app:layout_constraintStart_toStartOf="@id/text_active"
        app:layout_constraintTop_toBottomOf="@id/text_active" />

    <ImageView
        android:id="@+id/image_heart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_heart"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toEndOf="@id/text_recovered"
        app:layout_constraintStart_toStartOf="@id/text_recovered"
        app:layout_constraintTop_toBottomOf="@id/text_recovered" />

    <ImageView
        android:id="@+id/image_death"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_death"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toEndOf="@id/text_deceased"
        app:layout_constraintStart_toStartOf="@id/text_deceased"
        app:layout_constraintTop_toBottomOf="@id/text_deceased" />

    <TextView
        android:id="@+id/confirmed_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image_virus"
        app:layout_constraintStart_toStartOf="@id/image_virus"
        app:layout_constraintTop_toBottomOf="@id/image_virus" />

    <TextView
        android:id="@+id/active_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image_patient"
        app:layout_constraintStart_toStartOf="@id/image_patient"
        app:layout_constraintTop_toBottomOf="@id/image_patient" />

    <TextView
        android:id="@+id/recovered_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image_heart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/image_heart"
        app:layout_constraintTop_toBottomOf="@id/image_heart" />

    <TextView
        android:id="@+id/deceased_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image_death"
        app:layout_constraintStart_toStartOf="@id/image_death"
        app:layout_constraintTop_toBottomOf="@id/image_death" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/text_state_ut_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/text_state_ut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/state_ut"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/text_state_ut_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/confirmed_data" />

    <TextView
        android:id="@+id/state_confirmed_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/short_confirmed"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="@id/text_state_ut"
        app:layout_constraintEnd_toStartOf="@id/text_active_data"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/text_state_ut_guideline"
        app:layout_constraintTop_toTopOf="@id/text_state_ut" />

    <TextView
        android:id="@+id/text_active_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/short_active"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/state_confirmed_data"
        app:layout_constraintEnd_toStartOf="@id/state_recovered_data"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/state_confirmed_data"
        app:layout_constraintTop_toTopOf="@id/state_confirmed_data" />

    <TextView
        android:id="@+id/state_recovered_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/short_recovered"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/text_active_data"
        app:layout_constraintEnd_toStartOf="@id/text_deceased_data"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/text_active_data"
        app:layout_constraintTop_toTopOf="@id/text_active_data" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/data_groups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="india_covid_tracker,text_last_updated,text_last_updated,last_updated_time,text_confirmed,text_active,text_recovered,text_deceased,image_virus,image_patient,image_heart,image_death,confirmed_data,active_data,recovered_data,deceased_data,text_state_ut,state_confirmed_data,text_active_data,state_recovered_data,text_deceased_data,refresh_layout" />

    <TextView
        android:id="@+id/text_deceased_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/short_deceased"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/state_recovered_data"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/state_recovered_data"
        app:layout_constraintTop_toTopOf="@id/state_recovered_data" />

    <!--    <ProgressBar-->
    <!--        android:id="@+id/data_loading_progress"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:indeterminateTint="@android:color/black"-->
    <!--        app:layout_constraintEnd_toEndOf="@id/end_guideline"-->
    <!--        app:layout_constraintStart_toStartOf="@id/start_guideline"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/text_state_ut" />-->

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/text_state_ut">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shimmer_auto_start="true">

        <include layout="@layout/shimmer_layout" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retry"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:textColor="@android:color/holo_red_dark"
        app:cornerRadius="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:strokeColor="@android:color/holo_red_dark"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>